node recursion stopping works

--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -412,7 +412,7 @@ function tick() {
 function color(d) {
   if (d.id.indexOf("_repeat") != -1) {
     //repeated node
-    return "#FFFF00";
+    return "#DDDDDD";
   }
   if (d.highlight) {
     return "#00FFFF";
