messing with delete link data

--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -87,6 +87,11 @@ $('#add_connection_submit').click(function(e) {
   });
 });
 
+$('.delete_category').click(function(e) {
+  alert($(this.data("category"));
+  return false;
+});
+
 var w = 960,
     h = 400,
     node,
@@ -121,7 +126,7 @@ function person_me_callback(root,details) {
   l.empty();
   for (var i=0; i < root.children.length; i+=1) {
     l_item = $("<li></li>").text(root.children[i].name+"  ");
-    delete_link = $("<a href='/*'>delete</a>").data('catlink',{ category: root.children[i].name });
+    delete_link = $("<a class='delete_category' href='/*'>delete</a>").data("category",root.children[i].name);
     l_item.append(delete_link);
     l.append(l_item);
   }
