--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -87,8 +87,8 @@ $('#add_connection_submit').click(function(e) {
   });
 });
 
-$('.delete_category').click(function(e) {
-  alert($(this.data("category")));
+$(".delete_category").click(function(e) {
+  alert($(this).data("category")));
   return false;
 });
 
