--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -88,7 +88,7 @@ $('#add_connection_submit').click(function(e) {
 });
 
 $(".delete_category").click(function(e) {
-  alert($(this).data("category")));
+  alert($(this).data("category"));
   return false;
 });
 
