--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -107,7 +107,7 @@ function delete_category_click(e) {
   });
   return false; // prevents normal behaviour
 }
-function delete_category_click(e) {
+function delete_connection_click(e) {
   connection_name = $(this).data("connection_name");
   category_name = path[path.length-1].name;
   console.log("Deleting connection to "+category_name+" in category "+category_name);
