--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -163,8 +163,11 @@ function person_me_callback(root,details) {
   l.empty();
   for (var i=0; i < root.children.length; i+=1) {
     l_item = $("<li></li>").text(root.children[i].name+"  ");
-    delete_link = $("<a class='delete_category'>delete</a>").data("category",root.children[i].name).click(delete_category_click);
-    l_item.append(delete_link);
+    //preserve living group and work categories
+    if (root.children[i].name != "living group" && root.children[i].name != "work") {
+      delete_link = $("<a class='delete_category'>delete</a>").data("category",root.children[i].name).click(delete_category_click);
+      l_item.append(delete_link);
+    }
     l.append(l_item);
   }
 }
