--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Tutorial</title>
+  <title>6 Away</title>
   <%= stylesheet_link_tag    "application", "http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css", :media => "all" %>
   <%= javascript_include_tag "application", "http://code.jquery.com/jquery-1.9.0.js", "http://code.jquery.com/ui/1.10.0/jquery-ui.js" %>
   <%= csrf_meta_tags %>
