--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -68,7 +68,7 @@ $('#add_connection_submit').click(function(e) {
       var new_conn_name = valuesToSubmit[2].value;
       console.log("new connection name:");
       console.log(new_conn_name);
-      if (new_conn_name.length > 8 && new_conn_name.substr(new_conn_name.length-8,new_conn_name.length) === "@mit.edu") {
+      if (new_conn_name.length <= 8 || new_conn_name.substr(new_conn_name.length-8,new_conn_name.length) !== "@mit.edu") {
         alert("Connection name must be an @mit.edu email address")
         return;
       }
