--- a/app/assets/stylesheets/graph.css.scss
+++ b/app/assets/stylesheets/graph.css.scss
@@ -3,7 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 #chart {
-	width: 960px;
+  max-width: 960px;
+	width: 100%;
 	height: 400px;
 	background: #EEE;
 }
