--- a/app/views/graph/profile.html.erb
+++ b/app/views/graph/profile.html.erb
@@ -1,6 +1,12 @@
-<%= form_tag do %>
+<div id="profile_container">
+<h1>My Profile</h1>
+<div class="small-hr"></div>
 
-  <h1>My Profile</h1>
+<h3>Reset Your Password</h3>
+<%= link_to "Click here to reset your password", new_password_reset_path %>
+<div class="small-hr"></div>
+
+<%= form_tag do %>
 
   <div class="field">
     <%= label_tag(:name, "Full Name:") %>
@@ -19,6 +25,8 @@
     <%= text_field_tag(:living_group) %>
   </div>
 
+  <div class="small-hr"></div>
+
   <h3>Check things that you have the most appreciation for</h3>
   <div class="field">
     <%= check_box_tag(:ck_art) %>
@@ -34,8 +42,7 @@
     <%= submit_tag("Submit") %>
   </div>
 
-  <h3>Reset Your Password</h3>
-  <%= link_to "Click here to reset your password", new_password_reset_path %>
-
 <% end %>
+
+</div>
 
