--- a/app/assets/stylesheets/graph.css.scss
+++ b/app/assets/stylesheets/graph.css.scss
@@ -39,6 +39,13 @@ line.link {
   font-weight: 900;
 }
 
+.small-hr {
+  width: 100px;
+  border-top: 1px dotted #666;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 #profile_container {
   width: 100%;
   margin-left: 100px;
