--- a/app/assets/stylesheets/graph.css.scss
+++ b/app/assets/stylesheets/graph.css.scss
@@ -40,7 +40,7 @@ line.link {
 }
 
 .small-hr {
-  width: 100px;
+  width: 60px;
   border-top: 1px dotted #666;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -49,4 +49,21 @@ line.link {
 #profile_container {
   width: 100%;
   margin-left: 100px;
+}
+
+#profile_container fieldset {
+  border: 2px solid #555;
+  padding: 20px;
+}
+#profile_container label {
+  display:block;
+  margin:12px 0 0;
+  font-weight:700;
+  font-size:.9em;
+  float:left;
+  width:90px;
+}
+
+#profile_container label:after {
+  content:": ";
 }
