--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>6 Away</title>
-  <%= stylesheet_link_tag    "application", "http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css", "http://fonts.googleapis.com/css?family=Archivo+Narrow", :media => "all" %>
+  <%= stylesheet_link_tag    "application", "http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css", :media => "all" %>
   <%= javascript_include_tag "application", "http://code.jquery.com/jquery-1.9.0.js", "http://code.jquery.com/ui/1.10.0/jquery-ui.js" %>
   <%= csrf_meta_tags %>
 </head>
