--- a/app/assets/stylesheets/graph.css.scss
+++ b/app/assets/stylesheets/graph.css.scss
@@ -40,7 +40,7 @@ line.link {
 }
 
 #profile_container {
-  width: 100%;
+  width: 600px
   margin-left: 100px;
 }
 
@@ -49,7 +49,7 @@ line.link {
   padding: 20px;
   margin-bottom: 20px;
 }
-#profile_container label {
+#profile_personal_info label {
   display:block;
   margin:12px 0 0;
   font-weight:700;
@@ -62,4 +62,11 @@ line.link {
   font-size: 20px;
   padding-left: 5px;
   padding-right: 5px;
+}
+
+input {
+  padding: 5px;
+  border: 2px solid #555;
+  font-family: Tahoma;
+  width: 200px;
 }
