--- a/app/views/graph/profile.html.erb
+++ b/app/views/graph/profile.html.erb
@@ -1,16 +1,14 @@
 <div id="profile_container">
 <h1>My Profile</h1>
 
-<br />
-<br />
+<br>
 
 <h3>Reset Your Password</h3>
 <%= link_to "Click here to reset your password", new_password_reset_path %>
 
-<br />
-<br />
+<br>
 
-<%= form_tag do %>
+<%= form_tag :id => 'profile_personal_info' do %>
 
   <fieldset>
   <legend>Personal Information</legend>
