--- a/app/assets/stylesheets/graph.css.scss
+++ b/app/assets/stylesheets/graph.css.scss
@@ -41,7 +41,7 @@ line.link {
 
 #profile_container {
   width: 600px;
-  margin-left: 100px;
+  margin: 0 auto;
 }
 
 #profile_container fieldset {
@@ -49,7 +49,7 @@ line.link {
   padding: 20px;
   margin-bottom: 20px;
 }
-#profile_personal_info label {
+.profile_personal_info label {
   display:block;
   margin:12px 0 0;
   font-weight:700;
