--- a/app/views/graph/profile.html.erb
+++ b/app/views/graph/profile.html.erb
@@ -1,41 +1,40 @@
 <div id="profile_container">
 <h1>My Profile</h1>
 
-<br>
+<br><br><br>
 
 <h3>Reset Your Password</h3>
 <%= link_to "Click here to reset your password", new_password_reset_path %>
 
-<br>
+<br><br><br><br>
 
-<%= form_tag :id => 'profile_personal_info' do %>
-
-  <fieldset>
-  <legend>Personal Information</legend>
-
-  <div class="field">
-    <%= label_tag(:name, "Full Name:") %>
-    <%= text_field_tag(:name) %>
-  </div>
-  <div class="field">
-    <%= label_tag(:major, "Major:") %>
-    <%= text_field_tag(:major) %>
-  </div>
-  <div class="field">
-    <%= label_tag(:year, "Year of study:") %>
-    <%= select_tag(:year, options_for_select([['Freshman', 1], ['Sophomore', 2], ['Junior', 3], ['Senior', 4], ['Graduate', 5]])) %>
-  </div>
-  <div class="field">
-    <%= label_tag(:living_group, "Dorm or living group:") %>
-    <%= text_field_tag(:living_group) %>
-  </div>
-
-  </fieldset>
+<%= form_tag do %>
 
   <fieldset>
   <legend>Personal Information</legend>
 
+  <div class="profile_personal_info">
+    <div class="field">
+      <%= label_tag(:name, "Full Name:") %>
+      <%= text_field_tag(:name) %>
+    </div>
+    <div class="field">
+      <%= label_tag(:major, "Major:") %>
+      <%= text_field_tag(:major) %>
+    </div>
+    <div class="field">
+      <%= label_tag(:year, "Year of study:") %>
+      <%= select_tag(:year, options_for_select([['Freshman', 1], ['Sophomore', 2], ['Junior', 3], ['Senior', 4], ['Graduate', 5]])) %>
+    </div>
+    <div class="field">
+      <%= label_tag(:living_group, "Dorm or living group:") %>
+      <%= text_field_tag(:living_group) %>
+    </div>
+  </div>
+
+  <br><br>
   <h3>Check things that you have the most appreciation for</h3>
+  <br>
   <div class="field">
     <%= check_box_tag(:ck_art) %>
     <%= label_tag(:ck_art, "Art") %>
