--- a/app/assets/stylesheets/graph.css.scss
+++ b/app/assets/stylesheets/graph.css.scss
@@ -64,9 +64,15 @@ line.link {
   padding-right: 5px;
 }
 
-input {
+input[type=text] {
   padding: 5px;
   border: 2px solid #555;
   font-family: Tahoma;
   width: 200px;
+}
+
+select {
+  border: 2px solid #555;
+  padding: 4px;
+  margin: 0;
 }
