--- a/app/views/graph/profile.html.erb
+++ b/app/views/graph/profile.html.erb
@@ -1,12 +1,16 @@
 <div id="profile_container">
 <h1>My Profile</h1>
 
-<br><br><br>
+<br>
+<div class="hr"></div>
+<br>
 
 <h3>Reset Your Password</h3>
 <%= link_to "Click here to reset your password", new_password_reset_path %>
 
 <br><br><br><br>
+<div class="hr"></div>
+<br>
 
 <%= form_tag do %>
 
