--- a/app/views/graph/profile.html.erb
+++ b/app/views/graph/profile.html.erb
@@ -5,13 +5,6 @@
 <div class="hr"></div>
 <br>
 
-<h3>Reset Your Password</h3>
-<%= link_to "Click here to reset your password", new_password_reset_path %>
-
-<br><br><br><br>
-<div class="hr"></div>
-<br>
-
 <%= form_tag do %>
 
   <fieldset>
@@ -39,7 +32,7 @@
   <br><br>
   <h3>Check things that you have the most appreciation for</h3>
   <br>
-  <div class="field">
+  <div class="field profile_checkboxes">
     <%= check_box_tag(:ck_art) %>
     <%= label_tag(:ck_art, "Art") %>
     <%= check_box_tag(:ck_music) %>
@@ -56,6 +49,12 @@
   </fieldset>
 
 <% end %>
+
+<br>
+<br>
+
+<h3>Reset Your Password</h3>
+<%= link_to "Click here to reset your password", new_password_reset_path %>
 
 </div>
 
