--- a/app/assets/stylesheets/graph.css.scss
+++ b/app/assets/stylesheets/graph.css.scss
@@ -82,7 +82,7 @@ select {
   margin: 0;
 }
 
-input[type=submit]) {
+input[type=submit] {
   border: 2px solid #333;
   padding: 5px 20px;
   background: rgb(81, 207, 247);
