--- a/app/assets/stylesheets/graph.css.scss
+++ b/app/assets/stylesheets/graph.css.scss
@@ -88,9 +88,13 @@ select {
 input[type=submit] {
   border: 2px solid #333;
   padding: 5px 20px;
-  background: rgb(235, 220, 46);
+  background: #DDD;
 }
 
 input[type=submit]:hover {
   background: rgb(255, 83, 60);
+}
+
+a:hover {
+  background: rgb(235, 220, 46);
 }
