--- a/app/assets/stylesheets/graph.css.scss
+++ b/app/assets/stylesheets/graph.css.scss
@@ -96,9 +96,7 @@ input[type=submit]:hover {
   cursor: pointer;
 }
 
-#details span {
-  padding: 7px;
+#details li {
   font-size: 20px;
-  background: #DDD;
-  margin-right: 10px;
+  margin: 0 0 5px 0; 
 }
