--- a/app/assets/stylesheets/graph.css.scss
+++ b/app/assets/stylesheets/graph.css.scss
@@ -97,6 +97,11 @@ input[type=submit]:hover {
 }
 
 #details li {
-  font-size: 20px;
-  margin: 0 0 5px 0; 
+  font-size: 16px;
+  margin: 0 0 10px 0; 
 }
+
+ul, ol {
+  list-style: square;
+}
+
