--- a/app/assets/stylesheets/graph.css.scss
+++ b/app/assets/stylesheets/graph.css.scss
@@ -101,6 +101,11 @@ input[type=submit]:hover {
   margin: 0 0 10px 0; 
 }
 
+#detail p {
+  font-size: 16px;
+  line-height: 130%;
+}
+
 ul, ol {
   list-style: square;
 }
