--- a/app/assets/stylesheets/graph.css.scss
+++ b/app/assets/stylesheets/graph.css.scss
@@ -102,7 +102,12 @@ input[type=submit]:hover {
 }
 
 #details p {
-  font-size: 16px;
+  font-size: 14px;
+  line-height: 130%;
+}
+
+#inside_person p {
+  font-size: 18px;
   line-height: 130%;
 }
 
